fix: fixes wrapping issue where buttons are wrapping when header doesn't

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@ html.is-dark {
 
 .App__header {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
@@ -44,6 +45,10 @@ html.is-dark {
   padding: 0 0.5rem;
   min-height: calc(100vh - 87px);
   overflow-x: scroll;
+}
+
+.App__button--container {
+    display: flex;
 }
 
 .App__button {
